# services

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.observability.yml  pyproject.toml
.github/agents/: backend-refactor.agent.md
.github/workflows/: ci.yml
apps/analytics/: .env.example  Dockerfile  README.md  pyproject.toml
apps/analytics/analytics/: app.py  cii_rating.py  client.py  config.py  database.py  router.py  schemas.py  service.py
apps/analytics/tests/: conftest.py  test_analytics_api.py
apps/data/: .env.example  Dockerfile  README.md  data.duckdb  pyproject.toml
apps/data/data/: app.py  config.py  database.py  models.py  pipeline.py  repository.py  router.py  schemas.py  service.py
apps/data/tests/: conftest.py  test_data_api.py
apps/data/uploads/2026-02-23/: vessel_1-20260223_110639.csv
apps/identity/: .env.example  Dockerfile  README.md  pyproject.toml
apps/identity/identity/: app.py  config.py  database.py  deps.py  models.py  repository.py  router.py  schemas.py  seed.sql  service.py
apps/identity/tests/: conftest.py  test_company_api.py  test_user_api.py
apps/meta/: .env.example  Dockerfile  README.md  pyproject.toml
apps/meta/meta/: app.py  config.py  database.py  models.py  repository.py  router.py  schemas.py  seed.sql  service.py
apps/meta/tests/: conftest.py  test_api.py
apps/vessel/: .env.example  Dockerfile  README.md  pyproject.toml
apps/vessel/tests/: conftest.py  test_vessel_api.py
apps/vessel/vessel/: app.py  config.py  database.py  models.py  repository.py  router.py  schemas.py  seed.sql  service.py
docker/promtail/: promtail-config.yml
docs/: api-compare-old-vs-refactor.json  api-compare-old-vs-refactor.md  api-result-compare-old-vs-refactor.json  api-result-compare-old-vs-refactor.md  ingress.md  kind-deployment.md  legacy-capability-split-plan.md  old-api-disposition-table.md  openapi.json  refactor-plan-old-vs-new-api.md  todo-backend-vs-services-refactor.md
k8s/: ingress.yml  kind-config.yml  namespace.yml
k8s/apps/: analytics.yml  data.yml  identity.yml  meta.yml  vessel.yml
k8s/observability/: grafana.yml  loki.yml  promtail.yml
libs/common/: pyproject.toml
libs/common/common/: __init__.py  auth.py  database.py  exceptions.py  logging.py  models.py  repository.py  schemas.py
libs/common/tests/: conftest.py  test_auth.py  test_exceptions.py  test_repository.py  test_schemas.py
scripts/: auto_restart_fastapi_8080.sh  check_services.sh  gen_openapi.py
