[project]
name = "data"
version = "0.1.0"
description = "数据服务 - 船舶遥测数据上传、清洗、存储与 CII 计算"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "pydantic-settings>=2.1",
    "uvicorn[standard]>=0.30",
    "pandas>=2.3",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "duckdb>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
