[project]
name = "vessel"
version = "0.1.0"
description = "船舶管理微服务 - 船舶信息、设备、动力曲线"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
